# snowflake-compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  out  out.c
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/codegen/src/backends/: mod.rs
crates/codegen/src/backends/c/: ast.rs  mod.rs  program.rs  transpiler.rs
crates/codegen/src/backends/llvm/: mod.rs  runtime.rs
crates/codegen/src/backends/x86_64/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  token.rs
crates/common/src/diagnostics/: mod.rs  printer.rs
crates/common/src/text/: mod.rs  span.rs
crates/common/src/typings/: mod.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: cli.rs  main.rs
crates/front/: Cargo.toml
crates/front/src/: compilation_unit.rs  lib.rs
crates/front/src/ast/: eval.rs  lexer.rs  mod.rs  parser.rs  printer.rs  visitor.rs
crates/middle/: Cargo.toml
crates/middle/src/: lib.rs
crates/middle/src/analysis/: mod.rs  mutability.rs
crates/middle/src/ir/: mod.rs
crates/tests/: Cargo.toml
crates/tests/src/: ast_tests.rs  diagnostics_tests.rs  lib.rs
crates/tests/src/common/: mod.rs
src/: compilation_unit.rs  lib.rs  main.rs
src/ast/: eval.rs  lexer.rs  mod.rs  parser.rs  printer.rs  visitor.rs
src/codegen/: mod.rs
src/codegen/c/: ast.rs  program.rs  transpiler.rs
src/codegen/x86_64/: mod.rs
src/diagnostics/: mod.rs  printer.rs
src/ir/hir/: builder.rs  mod.rs  writer.rs
src/ir/lir/: builder.rs  mod.rs
src/ir/mir/: basic_block.rs  builder.rs  mod.rs  writer.rs
src/text/: mod.rs  span.rs
src/typings/: mod.rs
(+26 files in other folders)
